Fix logo on mobiles

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -11,8 +11,8 @@
     float: left;
     color: $primary;
     @media only screen and (max-width: 550px) {
-     font-size: 1em;
-     padding-top: 4.7%;
+     font-size: 1.15em;
+     padding-top: 3%;
     }
 
     img {
